# mastervault

./: .gitignore  Cargo.toml  README.md  developing.txt
developer_tools/: text-operation.txt  text-operation_alternative.txt  text_operations.py  translate.py  translating.txt
developer_tools/text_operations/: config.py  databases.py  enums_operations.py  string_mapper.py
developer_tools/text_operations/error_handling/: general_error_handling.py
developer_tools/text_operations/subcommands/: help.py  new.py  remove.py
developer_tools/translation/: config.py
developer_tools/translation/commons/: clear.py  directories_operations.py  files_operations.py
developer_tools/translation/completion/: calculations.py  get_percentage.py
developer_tools/translation/subcommands/: add_language.py  check.py  help.py  list_languages.py  translate.py  validate.py
src/: config.txt  constant_data.db  main.rs
src/client_side/: argument_redirector.rs  change_master.rs  help.rs  mod.rs
src/client_side/add/: mod.rs
src/client_side/config/: mod.rs  repairment.rs
src/client_side/delete/: mod.rs
src/client_side/general/: mod.rs
src/client_side/get/: mod.rs
src/client_side/key/: mod.rs
src/client_side/list/: mod.rs
src/client_side/search/: mod.rs
src/client_side/update/: mod.rs
src/commons/: mod.rs
src/commons/fields/: mod.rs
src/commons/file_ops/: mod.rs  (+3 more)
src/config/: mod.rs
src/constants/: database.rs  defaults.rs  mod.rs
src/vault/: key.rs  mod.rs
translations/: help-translations.txt
translations/pol_polski/: constant_data.db  translation_data.yaml
(+57 files in other folders)
