[package]
name = "mastervault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
rand_core = { version = "0.6", features = ["std"] }
chacha20poly1305 = "0.10.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }